experimental/ir/testdata/fields/invalid_partial.proto.stderr.txt
error: cannot find `M.N` in this scope
  --> testdata/fields/invalid_partial.proto:23:9
   |
21 |     message N {}
   |             - found possibly related symbol `test.M.N`
22 |     message M {
23 |         M.N n = 1;
   |         ^^^ not found in this scope
   |
   = note: Protobuf's name lookup rules expected a symbol `test.M.M.N`, rather
           than the one we found

encountered 1 error
